<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:backgroundTint="@color/yellow"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/back2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:id="@+id/addrequest"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/wheat__1_" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/request"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/addrequest"
        app:layout_constraintStart_toStartOf="@+id/addrequest"
        app:layout_constraintTop_toTopOf="@+id/addrequest" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/main_title"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <ImageButton-->
    <!--        android:id="@+id/available"-->
    <!--        android:layout_width="450px"-->
    <!--        android:layout_height="450px"-->
    <!--        android:layout_marginStart="28dp"-->
    <!--        android:layout_marginTop="88dp"-->
    <!--        android:scaleType="fitCenter"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView4"-->
    <!--        app:srcCompat="@drawable/wheat" />-->

    <ImageButton
        android:id="@+id/available"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/harvest"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/edit"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_marginTop="230dp"
        android:scaleType="centerCrop"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/google_forms"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="450px"
        android:layout_height="450px"
        android:layout_marginTop="230dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/addrequest"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/man" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/available"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/available"
        app:layout_constraintStart_toStartOf="@+id/available"
        app:layout_constraintTop_toTopOf="@+id/available" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/my_request"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit"
        app:layout_constraintTop_toTopOf="@+id/edit" />

</androidx.constraintlayout.widget.ConstraintLayout>