<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/gray"
    tools:context=".Available_crops">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="418dp"
        android:layout_height="679dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/orderback" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25"
        app:srcCompat="@drawable/seeds" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="30dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/placeholder" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25"
        app:srcCompat="@drawable/rec" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView28"
        app:srcCompat="@drawable/rec" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView29"
        app:srcCompat="@drawable/rec" />

    <ImageButton
        android:id="@+id/imageView31"
        android:layout_width="294px"
        android:layout_height="294px"
        android:layout_marginStart="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/imageView28"
        app:layout_constraintStart_toStartOf="@+id/imageView28"
        app:layout_constraintTop_toTopOf="@+id/imageView28"
        app:srcCompat="@drawable/untitled_design_44" />

    <ImageButton
        android:id="@+id/imageView37"
        android:layout_width="294px"
        android:layout_height="294px"
        android:layout_marginStart="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/imageView30"
        app:layout_constraintStart_toStartOf="@+id/imageView30"
        app:layout_constraintTop_toTopOf="@+id/imageView30"
        app:srcCompat="@drawable/untitled_design_44" />

    <ImageButton
        android:id="@+id/imageView5"
        android:layout_width="294px"
        android:layout_height="294px"
        android:layout_marginStart="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/imageView29"
        app:layout_constraintStart_toStartOf="@+id/imageView29"
        app:layout_constraintTop_toTopOf="@+id/imageView29"
        app:srcCompat="@drawable/ala" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/crop_search"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral70"
        app:layout_constraintStart_toEndOf="@+id/imageView23"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:textColorHint="@color/material_dynamic_neutral70"
        app:layout_constraintStart_toEndOf="@+id/imageView25"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="411dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/pa"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="-2dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/available"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Viduth Ranaweera"
        android:textColor="@color/material_dynamic_neutral_variant30"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Ceylon carrot"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView28" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="316dp"
        android:text="Carrot"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView28" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="168dp"
        android:text="Potato"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView28" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="100 KG"
        android:textColor="@color/material_dynamic_neutral_variant30"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="2023-03-13"
        android:textColor="@color/material_dynamic_neutral_variant30"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Saman Kumara"
        android:textColor="@color/material_dynamic_neutral_variant30"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="50 KG"
        android:textColor="@color/material_dynamic_neutral_variant30"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="2023-03-12"
        android:textColor="@color/material_dynamic_neutral_variant30"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="1dp"
        android:text="Himesh Dilanka"
        android:textColor="@color/material_dynamic_neutral_variant30"
        app:layout_constraintStart_toEndOf="@+id/imageView37"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Bandarawela"
        android:textColor="@color/material_dynamic_neutral_variant30"
        app:layout_constraintStart_toEndOf="@+id/imageView37"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="25 KG"
        android:textColor="@color/material_dynamic_neutral_variant30"
        app:layout_constraintStart_toEndOf="@+id/imageView37"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="2023-03-11"
        android:textColor="@color/material_dynamic_neutral_variant30"
        app:layout_constraintStart_toEndOf="@+id/imageView37"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Walimada"
        android:textColor="@color/material_dynamic_neutral_variant30"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Bandarawela"
        android:textColor="@color/material_dynamic_neutral_variant30"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/planting" />

    <Button
        android:id="@+id/button4"
        android:layout_width="81dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="66dp"
        android:backgroundTint="@color/material_dynamic_primary50"
        android:text="Search"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

</androidx.constraintlayout.widget.ConstraintLayout>